# minecraft-translator

./: .gitignore  AGENTS.md  Makefile  README.md  VANILLA_GLOSSARY_GUIDE.md  docker-compose.yml  gui_build.spec  main.py  pyproject.toml
.github/workflows/: release.yml
examples/: vanilla_glossary_example.py
gui/: AGENTS.md  README.md  __init__.py  __main__.py  app.py  auth.py  config.py  main.py
gui/i18n/: __init__.py  translator.py
gui/styles/: app.qss
gui/views/: AGENTS.md  __init__.py  category_select.py  completion.py  modpack_select.py  retry.py  review.py  scan_result.py  translation_progress.py  upload.py  welcome.py
gui/widgets/: __init__.py  loading_dialog.py  modpack_tree.py  progress_card.py  stats_card.py  update_dialog.py
gui/workers/: AGENTS.md  __init__.py  scanner_worker.py  translation_worker.py  update_worker.py  upload_worker.py
src/: AGENTS.md  __init__.py  pipeline.py  prompts.py
src/glossary/: __init__.py  builder.py  vanilla_builder.py
src/handlers/: AGENTS.md  __init__.py  base.py  ftbquests.py  kubejs.py  language.py  origins.py  patchouli.py  puffish_skills.py  tconstruct.py  the_vault_quest.py
src/llm/: __init__.py  client.py
src/models/: __init__.py  callbacks.py  glossary.py  glossary_filter.py  translation.py  validation.py
src/output/: __init__.py  jar_mod.py  resource_pack.py  uploader.py
src/parsers/: AGENTS.md  json_parser.py  lang.py  (+1 more)
tools/: README.md  build_vanilla_glossary.py  bump_version.py
web/: .gitignore  Dockerfile  next.config.ts  package-lock.json  package.json  vercel.json
wiki/: 사용법.md
(+87 files in other folders)
