[project]
name = "auto-translate"
version = "2.0.5"
description = "Minecraft modpack translation pipeline with LLM support"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.3",
    "langchain-ollama>=0.3",
    "langchain-openai>=0.3",
    "langchain-anthropic>=0.3",
    "langchain-google-genai>=2.0",
    "pydantic>=2.0",
    "aiofiles>=24.0",
    "aiohttp>=3.0",
    "ftb-snbt-lib>=0.3",
    "colorlog>=6.10.1",
    "PySide6>=6.8",
    "PySide6-Fluent-Widgets>=1.7",
    "platformdirs>=4.0",
    "python-dotenv>=1.2.1",
]

[project.optional-dependencies]
dev = ["ty"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pyinstaller>=6.18.0",
]
